# editor

./: Cargo.toml  bigfile.txt  bigfile_on_one_line.txt
crates/editor/: Cargo.toml
crates/editor/src/: main.rs
crates/text-editor/: Cargo.toml
crates/text-editor/fuzz/: Cargo.toml
crates/text-editor/fuzz/fuzz_targets/: multi_line_wrap.rs  scroll_random.rs  single_line_wrap.rs
crates/text-editor/src/: lib.rs
crates/text-editor/tests/: helpers.rs  scroll_test.rs  wrap_test.rs
crates/ui/: Cargo.toml
crates/ui/src/: camera.rs  camera_uniform.rs  image_pipeline.rs  layout.rs  lib.rs  mesh.rs  pipeline.rs  quad.wgsl  quad_pipeline.rs  rect.wgsl  shader.wgsl  text.rs  text.wgsl  texture.rs  texture_atlas.rs
src/: main.rs
