[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = { version = "1", features = [ "derive" ] }
env_logger = "0.11"
image = "0.25"
pollster = "0.3"
wgpu = "0.19"
winit = "0.29"
etagere = "0.2"
lru = "0.12"
fontdue = { version = "0.8.0", features = [ "parallel", "rayon" ] }
