[package]
name = "text-editor-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.text-editor]
path = ".."

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[[bin]]
name = "single_line_wrap"
path = "fuzz_targets/single_line_wrap.rs"
test = false
doc = false
bench = false

[[bin]]
name = "multi_line_wrap"
path = "fuzz_targets/multi_line_wrap.rs"
test = false
doc = false
bench = false
